--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>to-do-app</title>
 </head>
 <body>
-    
+    <div class="container" >
+        <div class="todo-app" >
+            <h2>To-Do List</h2>
+            <div class="row" >
+                <input type="text" id="input-box" placeholder="Add task" >
+                <button onclick="addTask()" >+</button>
+            </div>
+            <ul id="list-container" ></ul>
+        </div>
+    </div>    
+    <script src="script.js"></script>
 </body>
 </html>
